affichage de la liste des chaine partie admin

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -411,15 +411,34 @@ a.btn.bouton-password{color: white; box-shadow: 0 6px 10px 0 #0000001a,0 1px 18p
     border-right: 1px solid #dddddd;
     line-height: 15px;
     font-weight: 100 !important;
+    color: black;
 }
 #entete th:last-child, #corps-table td:last-child, #malist td:last-child {border-right: none !important;}
 #corps-table td, #malist td{
     border-left: none !important;
     text-align: center;
+    color: black;
 }
 #corps-table td:first-child, #malist td:first-child{
     border-top: none !important;
 }
+
+#channel-table th, td { 
+    text-align: center;
+    width: 153px !important;
+    color: #242427;
+}
+
+#channel-table tr {
+    border: 1px solid #5a5c69;
+}
+
+#channel-table td:first-child td:last-child{
+    
+
+}
+
+
 .couleur-principal{
     background-color: #EF0051; 
     color: #fff; 
