--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center mt-5" href="{{ path('admin.setting.index', {'id': app.user.id}) }}">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center mt-5" href="{{ path('admin.setting.index') }}">
         <div class="sidebar-brand-text mx-3">Administrateur</div>
     </a>
 
@@ -21,7 +21,7 @@
  
 <!-- Nav Item - Utilisateurs -->
     <li class="nav-item active">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('admin.users.index') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('admin.users.index') }#}">
             <span>Utilisateurs</span>
         </a>
     </li>    
@@ -40,7 +40,7 @@
 
     <!-- Nav Item - signalements -->
     <li class="nav-item active">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('admin.Signalements.index') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('admin.Signalements.index') }#}">
             <span>Signalements</span>
         </a>
     </li>
