--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -30,7 +30,7 @@
                         <!--img logo-->
                         <div class="image-upload">
                             <label for="cameraInput">
-                                <img src="{{ channel.avatar }}" alt="" id="profil">
+                                <img src="" alt="" id="profil">
                                 <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                             </label>
                             <input type="file" accept="image/*" id="cameraInput">
@@ -40,7 +40,7 @@
                         <div class="row mb-1">
                             <div class="col-sm">
                                 <div class="form-group editchannel" >
-                                     <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value='{{channel.nomChaine}}'> 
+                                     <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value=''> 
                                 </div>
                                 <div class="form-group editchannel">
                                     <button id="button-settingsAdmin" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" >Enregistrer</button>
