--- a/templates/admin/channel/script.html.twig
+++ b/templates/admin/channel/script.html.twig
@@ -7,3 +7,135 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
+
+ <!-- Page level plugins -->
+  <script src="{{ asset('vendor/datatables/jquery.dataTables.min.js') }}"></script>
+  <script src="{{ asset('vendor/datatables/dataTables.bootstrap4.min.js') }}"></script>
+
+  <!-- Page level custom scripts -->
+  <script src="{{ asset('js/demo/datatables-demo.js') }}"></script>
+
+<script>
+//https://www.thatsoftwaredude.com/content/6125/how-to-paginate-through-a-collection-in-javascript
+$(document).ready(function() {
+
+    const token = localStorage.getItem("token");
+    let channelId = localStorage.getItem("channelId");
+
+    if(token !== ""){
+
+        $.ajax({
+            type: "POST", 
+            url: "/admin/channel/show", 
+            data: JSON.stringify({
+                "token": token,
+            }),
+            dataType: 'json',
+            async: true,
+            success: function(response) {
+
+                if(response != undefined) {
+
+                    let mytab;
+
+                    for(let i=0; i<response.channels.length; i++){
+                        mytab += "<tr><td ><img class='rounded-circle' style='font-size:2em; width:31px; height:32px;' src='"+response.channels[i].avatar
+                        +"' id='profil'></td><td >"+response.channels[i].channel_name
+                        +"</td><td >"+response.channels[i].status
+                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='#' class='fa-2x far fa-edit' id='"
+                        +channelId+"'></a></td></tr>";
+                    }
+                    
+                     $("#channels-corps").append(mytab);
+                }
+                console.log(response);
+                
+            },
+            error: function (err) {
+                
+                console.log(err);
+            }
+        }); //fin ajax
+
+    }// fin if
+
+
+        $('.fa-edit').click((e) => {
+            e.preventDefault(); 
+
+            let myId = $(this).attr("id");
+
+            console.log(myId);
+
+        });
+
+
+
+
+
+
+
+   /* function pagination () {
+
+          function makeList() {
+                        for (x = 0; x < response.channels.length; x++)
+                            mytab +="<tr><td ><img class='rounded-circle' style='font-size:2em; width:31px; height:32px;' src='"+response.channels[x].avatar
+                        +"' id='profil'></td><td >"+response.channels[x].channel_name
+                        +"</td><td >"+response.channels[x].status
+                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='#' class='fa-2x far fa-edit' id='"
+                        +channelId+"'></a></td></tr>";
+
+                        numberOfPages = getNumberOfPages();
+                    }
+
+                    function getNumberOfPages() {
+                        return Math.ceil(response.channels.length / numberPerPage);
+                    }
+
+                    function nextPage() {
+                        currentPage += 1;
+                        loadList();
+                    }
+
+                    function previousPage() {
+                        currentPage -= 1;
+                        loadList();
+                    }
+
+                    function loadList() {
+                        let begin = ((currentPage - 1) * numberPerPage);
+                        let end = begin + numberPerPage;
+
+                        pageList = list.slice(begin, end);
+                        drawList();
+                        check();
+                    }
+                
+                    function drawList() {
+                        let mypage = $("#pagination_data");
+                        for (r = 0; r < pageList.length; r++) {
+                            mypage += pageList[r] + "<br/>";
+                        }
+
+                        $("#pagination_data").html(mypage);
+                    }
+
+                    function check() {
+                        document.getElementById("next").disabled = currentPage == numberOfPages ? true : false;
+                        document.getElementById("previous").disabled = currentPage == 1 ? true : false;
+                        document.getElementById("first").disabled = currentPage == 1 ? true : false;
+                        document.getElementById("last").disabled = currentPage == numberOfPages ? true : false;
+                    }
+
+                    function load() {
+                        makeList();
+                        loadList();
+                    }
+                        
+                    window.onload = load;
+        
+    }// fin fonction*/
+   
+
+});
+</script>
