--- a/templates/admin/signalements/bannir.html.twig
+++ b/templates/admin/signalements/bannir.html.twig
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-footer bannirButton">                                   
                     <button type="button" class="row col-6 oui d-flex justify-content-center">
-                        <a href="{{ path('admin.bannir', {id: Signalement.id}) }}">Oui</a>
+                        <a href="{#{ path('admin.bannir') }#}">Oui</a>
                     </button>
                 <div class="diviser-col"></div>
                 <button type="button" class="row col-6 non d-flex justify-content-center" data-dismiss="modal">Non</button>
