--- a/templates/pages/script.html.twig
+++ b/templates/pages/script.html.twig
@@ -21,11 +21,17 @@ $(document).ready(function() {
     let store = true;
     const token = localStorage.getItem("token");
 
-    let username =  localStorage.getItem("username");
-    let avatar   =  localStorage.getItem("avatar");
-    let password =  localStorage.getItem("password");
-    let userId   =  localStorage.getItem("userId"); 
-    let channelId = localStorage.getItem("channelId");
+    let username        =  localStorage.getItem("username");
+    let avatar          =  localStorage.getItem("avatar");
+    let password        =  localStorage.getItem("password");
+    let userId          =  localStorage.getItem("userId"); 
+    let channelId       = localStorage.getItem("channelId");
+    let status          = localStorage.getItem("status");
+    let channelName     = localStorage.getItem("channel_name");
+    let channelAvatar   = localStorage.getItem("channel_avatar");
+    let nbrEcoute       = localStorage.getItem("nbr_ecoute");
+    let nbrEcouteGlobal = localStorage.getItem("nbr_ecoute_global");
+    let email           = localStorage.getItem("email");
 
     if(token !== null ) {
 
@@ -49,6 +55,24 @@ $(document).ready(function() {
     }
     if(channelId !== null){
         localStorage.removeItem("channelId");
+    }
+    if(status !== null){
+        localStorage.removeItem("status");
+    }
+    if(channelName !== null){
+        localStorage.removeItem("channel_name");
+    }
+     if(channelAvatar !== null){
+        localStorage.removeItem("channel_avatar");
+    }
+     if(nbrEcoute !== null){
+        localStorage.removeItem("nbr_ecoute");
+    }
+     if(nbrEcouteGlobal !== null){
+        localStorage.removeItem("nbr_ecoute_global");
+    }
+    if(email !== null){
+        localStorage.removeItem("email");
     }
    
     
@@ -278,6 +302,7 @@ function inputPassword(inputData, input){
                                         localStorage.setItem("userId", responsepro.user[0].user_id); 
                                         localStorage.setItem("channelId", responsepro.user[0].channel_id); 
                                         localStorage.setItem("status", responsepro.user[0].status);
+                                        localStorage.setItem("email", responsepro.user[0].email);
 
                                         let role = responsepro.user[0].role;
                                     if(role === "ROLE_SUPER_ADMIN")
@@ -292,7 +317,7 @@ function inputPassword(inputData, input){
 
                                             setTimeout(function(){
 
-                                                window.location.href = "/";
+                                                window.location.href = "/admin";
 
                                             }, 2000);
 
