--- a/templates/users/settings/script.html.twig
+++ b/templates/users/settings/script.html.twig
@@ -258,7 +258,7 @@ $(document).ready(function() {
                     console.log(err);
                 }
             });
-        });
+        });// fin password
         
 });
 </script>
