--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -21,7 +21,7 @@
  
 <!-- Nav Item - Utilisateurs -->
     <li class="nav-item active">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('admin.users.index') }#}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('admin.users.index') }}">
             <span>Utilisateurs</span>
         </a>
     </li>    
