--- a/templates/admin/signalements/base.html.twig
+++ b/templates/admin/signalements/base.html.twig
@@ -41,17 +41,19 @@
                                 <div class="row col-sm-12">
                                     <div class="table-responsive">
                                 
-                                    <table id="table" class"table table-bordered w-100" role="grid">
+                                    <table id="signal-table" class"table table-bordered"  width="100%" cellspacing="0">
                                     <thead>
-                                        <tr id='entete' role="row">
-                                            <th scope='col'>Avatar</th>
-                                            <th scope='col'>Nom de la chaîne</th>
-                                            <th scope='col'>Nombre de signalements</th>
-                                            <th scope='col'>Liste des signalements</th>
-                                            <th scope='col'>Management</th>
+                                        <tr>
+                                            <th>Avatar</th>
+                                            <th>Nom de la chaîne</th>
+                                            <th>Nombre de signalements</th>
+                                            <th>Liste des signalements</th>
+                                            <th>Management</th>
                                         </tr>
                                     </thead>
-                                    
+                                    <tbody id="signal-corps">
+                                        
+                                    </tbody>
                                     </table>
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
                                         
