--- a/templates/admin/user/new/script.html.twig
+++ b/templates/admin/user/new/script.html.twig
@@ -28,7 +28,7 @@ $(document).ready(function() {
 
     $.ajax({
     method: "GET", 
-    url: "/admin/users/firebase", 
+    url: "/firebase", 
     async: true,
     success: function(data) {
     //console.log(data.apiKey+" "+data.authDomain+" "+data.databaseURL+" "+data.projectId+" "+data.storageBucket);
