--- a/templates/admin/user/removeUser/modal.html.twig
+++ b/templates/admin/user/removeUser/modal.html.twig
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-footer bannirButton">
                 <button type="button" class="row col-6 oui d-flex justify-content-center">
-                    <a href="{{ path('admin.user.bannir', {id: user.id}) }}">Oui</a>
+                    <a href="{#{ path('admin.user.bannir') }#}">Oui</a>
                 </button>
                 
                 <div class="diviser-col"></div>
