--- a/templates/admin/channel/script.html.twig
+++ b/templates/admin/channel/script.html.twig
@@ -20,7 +20,7 @@
 $(document).ready(function() {
 
     const token = localStorage.getItem("token");
-    let channelId = localStorage.getItem("channelId");
+    let IdChannel = localStorage.getItem("channelId");
 
     if(token !== ""){
 
@@ -42,8 +42,8 @@ $(document).ready(function() {
                         mytab += "<tr><td ><img class='rounded-circle' style='font-size:2em; width:31px; height:32px;' src='"+response.channels[i].avatar
                         +"' id='profil'></td><td >"+response.channels[i].channel_name
                         +"</td><td >"+response.channels[i].status
-                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='#' class='fa-2x far fa-edit' id='"
-                        +channelId+"'></a></td></tr>";
+                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='{{ path('admin.channel.edit') }}' class='fa-2x far fa-edit' id='"
+                        +IdChannel+"'></a></td></tr>";
                     }
                     
                      $("#channels-corps").append(mytab);
