--- a/templates/admin/user/edit/edit.html.twig
+++ b/templates/admin/user/edit/edit.html.twig
@@ -23,7 +23,7 @@
                    
                     <div class="image-upload">
                         <label for="cameraInput">
-                            <img src="{{ user.avatar }}" alt="" id="profil">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="" id="profil">
                             <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                         </label>
                         <input type="file" accept="image/*" id="cameraInput">
@@ -32,8 +32,15 @@
                       
                     <div class="row mb-5">
                         <div class="col-sm">
-                            {{ include('admin/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
-                        </div>
+                           <div class="form-group adduser" id="name">
+                                 <input type='text' id="username" class='form-control text-center text-black' placeholder='username' value=''>
+                            </div>
+        
+                            <div class="form-group adduser">
+                                <button type="submit" id="enregister" class="form-control border-0 font-weight-bold text-white"  style="background-color:#EF0051;">Enregistrer</button>
+                            </div>
+
+                         </div>
                     </div>
                 </div>  
             </div>
