--- a/templates/admin/user/edit/script.html.twig
+++ b/templates/admin/user/edit/script.html.twig
@@ -21,7 +21,7 @@ $(document).ready(function() {
 
     $.ajax({
     method: "GET", 
-    url: "/admin/users/firebase", 
+    url: "/firebase", 
     async: true,
     success: function(data) {
     //console.log(data.apiKey+" "+data.authDomain+" "+data.databaseURL+" "+data.projectId+" "+data.storageBucket);
@@ -44,7 +44,7 @@ $(document).ready(function() {
 
         
             let filename = $('#cameraInput').val().replace(/C:\\fakepath\\/i, '');
-            let storageRef = firebase.storage().ref('/User/{{user.id}}' + filename);
+            let storageRef = firebase.storage().ref('/User/' + filename);
 
             // On envoi le fichier à Firebase
             let upload = storageRef.put(selectedFile);
@@ -71,23 +71,11 @@ $(document).ready(function() {
                             console.log(downloadUrl)
 
                              let username = $('#username').val();
-                            let email = $('#email').val();
-                            let channels = $('#channels').val();
 
-
-                                 $(".erreur").remove();
-
-                                if (username.length < 3) 
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>'); 
-                                }else if(username.length > 10)
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
-                                }
                                 
                             $.ajax({
                                     type: "POST", 
-                                    url: "/admin/users/{{user.id}}/edit", 
+                                    url: "/admin/users/edit", 
                                     data: JSON.stringify({
                                         "downloadUrl": downloadUrl,
                                         "username": username,
