--- a/templates/admin/user/script.html.twig
+++ b/templates/admin/user/script.html.twig
@@ -7,3 +7,58 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
+
+<script>
+$(document).ready(function() {
+
+    const token = localStorage.getItem("token");
+    let idUser;
+
+    if(token !== ""){ 
+
+        $.ajax({
+            type: "POST", 
+            url: "/admin/users/show", 
+            data: JSON.stringify({
+                "token": token,
+            }),
+            dataType: 'json',
+            async: true,
+            success: function(response) {
+
+                if(response != undefined) {
+
+                    let mytab;
+
+                    for(let i=0; i<response.users.length; i++){
+
+                        idUser = response.users[i].user_id;
+
+                        mytab += "<tr><td ><img class='rounded-circle' style='font-size:2em; width:31px; height:32px;' src='"+response.users[i].avatar
+                        +"' id='profil'></td><td >"+response.users[i].username
+                        +"</td><td >"+response.users[i].email
+                        +"</td><td >"+response.users[i].username
+                        +"</td><td >"+response.users[i].status
+                        +"</td><td ><a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='far fa-trash-alt fa-2x'></a><a href='{{ path('admin.users.edit', {id: "idUser"}) }}' class='fa-2x far fa-edit' id='"
+                        +response.users[i].user_id+"'></a></td></tr>";
+                    }
+                    
+                     $("#users-corps").append(mytab);
+                }
+                console.log(response);
+                
+            },
+            error: function (err) {
+                
+                console.log(err);
+            }
+        }); //fin ajax
+  
+
+    }// fin if
+
+
+
+});
+</script>
+
