--- a/templates/admin/user/new/new.html.twig
+++ b/templates/admin/user/new/new.html.twig
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="main d-flex flex-column align-items-center justify-content-center">
-
+                    <div class="row col-xl-12 alert alert-success"  style="display: none;" id="newcompte" role="alert"></div>
                     <div class="image-upload">
                         <label for="cameraInput">
                             <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="" id="profil">
@@ -32,22 +32,20 @@
                     <!--input-->
                     <div class="row mb-5">
                         <div class="col-sm">
-                            <div class="form-group adduser" id="name">
-                                <input type='text' id="username" class='form-control text-center text-black' placeholder='Username' value=''>
-                            </div>
+
                             <div class="form-group adduser" id="emailadd">
                                 <input type='text' id="email" class='form-control text-center text-black' placeholder='Email' value=''>
                             </div>
-                            <div class="form-group adduser">
-                                <select class="form-control" id="sel1">
-                                    <option class="text-center text-black">USER</option>
-                                    <option class="text-center text-black">ADMIN</option>
-                                </select>
+
+                            <div class="form-group adduser" id="name">
+                                <input type='text' id="username" class='form-control text-center text-black' placeholder='Username' value=''>
                             </div>
+
+
                             <div class="form-group adduser">
-                                <input type="button" id="saveUser" class="form-control border-0 font-weight-bold text-white"  style="background-color:#EF0051;" value="Ajouter">
+                                <input type="submit" id="saveUser" class="form-control border-0 font-weight-bold text-white btn_submit"  style="background-color:#EF0051;" value="Ajouter un utilisateur">
                             </div>
-                            {#{ include('admin/user/_form.html.twig') }#}
+                            
                         </div>
                     </div>
                     
